apps/mytenant/my-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: mytenant
  labels:
    app: my-app
spec:
  selector:
    app: my-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
